@startuml architecture_overview
package "businessRules" #FFF {
    package "Entity" #EEEEEE {
        class "User" {
            {field} email: string
            {field} roles: array
            {field} password: string
            {field} firstname: string
            {field} lastname: string
        }

        class "Post" {
            {field} title: string
            {field} description: string
            {field} createdAt: DateTimeInterface
        }

        class "Picture" {
            {field} name: string
            {field} url: string
        }

        User "One" *-- "Many" Post: To
        Post "One" *-- "Many" Picture : To
        
    }
}



@enduml